2.3/nginx-multitool.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-multitool
  labels:
    app: nginx-multitool
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-multitool
  template:
    metadata:
      labels:
        app: nginx-multitool
    spec:
      containers:
      - name: multitool
        image: wbitt/network-multitool:latest
      - name: nginx
        image: nginx:latest
        volumeMounts:
        - name: nginx-volume
          mountPath: /usr/share/nginx/html
      volumes:
      - name: nginx-volume
        configMap:
          name: nginx-default-index
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-multitool-svc
spec:
  selector:
    app: nginx-multitool
  ports:
    - name: multitool
      protocol: TCP
      port: 9001
      targetPort: 8080
    - name: nginx
      protocol: TCP
      port: 9002
      targetPort: 80
